<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.braulio.chairman.DeviceScanActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="75dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Toppings"
                android:textSize="15sp"/>

            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addWhippedCream"
                android:text="@string/whipped_cream"
                android:textSize="15sp"/>

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addChocolate"
                android:text="@string/chocolate"
                android:textSize="15sp"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:src="@drawable/coffee"
                />



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <Button
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="25sp"
                    android:onClick="decrementCoffeeMain"/>

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:paddingLeft="8dp"
                    android:paddingRight="15dp"
                    android:text="0"
                    android:textSize="25sp"
                    />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textSize="25sp"
                    android:onClick="incrementCoffeeMain"
                    android:elevation="8dp"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:text="@string/initial_price"
                android:textAlignment="center"
                android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            >
            <!--<EditText-->
            <!--android:id="@+id/enter_name"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:hint="Please Enter Your Name"/>-->

            <Button
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="5dp"
                android:onClick="payOrder"
                android:text="@string/pay"
                android:textSize="17sp"/>
        </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>