<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <!--<android.support.v4.widget.SwipeRefreshLayout-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:id="@+id/swiperefresh"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <ListView
            android:id="@+id/listitem_device"
            style="@android:style/Widget.DeviceDefault.ExpandableListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeToScanBLE"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:orientation="vertical"
                >


                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Toppings"-->
                <!--android:textSize="15sp"/>-->

                <!--<CheckBox-->
                <!--android:id="@+id/whipped_cream_checkbox"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:onClick="addWhippedCream"-->
                <!--android:text="@string/whipped_cream"-->
                <!--android:textSize="15sp"/>-->

                <!--<CheckBox-->
                <!--android:id="@+id/chocolate_checkbox"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:onClick="addChocolate"-->
                <!--android:text="@string/chocolate"-->
                <!--android:textSize="15sp"/>-->


                <GridView xmlns:android="http://schemas.android.com/apk/res/android"
                          android:id="@+id/menuGridView"
                          android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:columnWidth="150dp"
                          android:gravity="center"
                          android:numColumns="auto_fit"
                          android:stretchMode="columnWidth">

                </GridView>


                <!--<ImageView-->
                <!--android:layout_width="150dp"-->
                <!--android:layout_height="120dp"-->
                <!--android:src="@drawable/coffee"-->
                <!--/>-->


                <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:orientation="horizontal">-->

                <!--<Button-->
                <!--android:layout_width="40dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:onClick="decrementCoffee"-->
                <!--android:text="-"-->
                <!--android:textSize="25sp"/>-->

                <!--<TextView-->
                <!--android:id="@+id/quantity_text_view"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="numberSigned"-->
                <!--android:paddingLeft="8dp"-->
                <!--android:paddingRight="15dp"-->
                <!--android:text="0"-->
                <!--android:textSize="25sp"-->
                <!--/>-->

                <!--<Button-->
                <!--android:layout_width="40dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:elevation="8dp"-->
                <!--android:onClick="incrementCoffee"-->
                <!--android:text="+"-->
                <!--android:textSize="25sp"/>-->
                <!--</LinearLayout>-->


            </LinearLayout>

            <LinearLayout
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/initial_price"
                    android:textAlignment="center"
                    android:textSize="30sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--<EditText-->
                <!--android:id="@+id/enter_name"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:hint="Please Enter Your Name"/>-->

                <Button
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:onClick="payOrder"
                    android:text="@string/pay"
                    android:textSize="17sp"/>

                <Button
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:onClick="cancelOrder"
                    android:text="@string/cancel"
                    android:textSize="17sp"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>